# v4py.github.io

./: .buildinfo  .gitignore  LICENSE.md  Makefile  README.md  _config.yml  basics.html  capek_nltk_api.html  capek_nltk_api.md  case.html  data.html  day1.ipynb  day2.ipynb  feed.xml  genindex.html  gotchas.html  index.html  intro.html  objects.inv  outro.html  pyproject.toml  regex.html  requirements.txt  rest.html  search.html  searchindex.js  unicode.html  welcome.html
_data/: toc.yml
_sources/: basics.ipynb  data.ipynb  data.md  gotchas.ipynb  intro.ipynb  intro.md  outro.ipynb  regex.ipynb  rest.ipynb  unicode.ipynb  welcome.md
_sources/.ipynb_checkpoints/: intro-checkpoint.ipynb  intro-checkpoint.md
_sources/case/: collocations.ipynb  keywords.ipynb  keywords.md  topic.ipynb
case/: collocations.html  keywords.html  topic.html
content/: LICENSE.md  basics.ipynb  case.ipynb  data.html  data.ipynb  gotchas.ipynb  intro.html  intro.ipynb  outro.ipynb  regex.ipynb  rest.html  rest.ipynb  unicode.html  unicode.ipynb
content/case/: collocations.html  collocations.ipynb  keywords.html  keywords.ipynb  topic.ipynb
content/data/: concordance_corpus.xlsx
data/: text.txt
patches/: binder.html.patch  jupyterhub.html.patch  launch.py.patch
scripts/: do_patches.sh  generate_content.sh  install.sh  src2content.sh
src/: _config.yml  _toc.yml  appendix.md  basics.html  basics.md  case.html  case.md  data.html  data.md  gotchas.html  gotchas.md  intro.html  intro.md  outro.html  outro.md  regex.html  regex.md  rest.html  rest.md  unicode.html  unicode.md
(+9 files in other folders)
