[tool.poetry]
name = "e-v4py"
version = "0.1.0"
description = "E-learning materials for Python under the V4Py project."
authors = ["David Lukes <dafydd.lukes@gmail.com>"]
license = "CC-BY-SA-4.0"

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.4.5"
corpy = "^0.2.3"
ghp-import = "^0.5.5"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.0.1"
jupyter-book = "^0.6.4"
jupytext = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
