[tool.poetry]
name = "e-v4py"
version = "0.1.0"
description = "E-learning materials for Python under the V4Py project."
authors = ["David Lukes <dafydd.lukes@gmail.com>", "Rudolf Rosa <rosa@ufal.mff.cuni.cz>"]
license = "CC-BY-NC-SA-4.0"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
nltk = "^3.4.5"
corpy = "^0.2.3"
requests = "^2.23.0"
requests-html = "^0.10.0"
pandas = "^1.0.3"
conllu = "^2.3.2"
ipywidgets = "^7.5.1"
xlrd = "^1.2.0"
dill = "^0.3.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.0.1"
jupyter-book = "^0.8"
jupytext = "^1.4.1"
ghp-import = "^0.5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
